snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.module.sha1
93d8106c0bd3a904c4036dccd856038c4664b2e1